Perform gradle rewriteRun